--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,42 @@
-html,body{
-    background-color: black;
-    margin:0;
-    height:100%;
-    overflow:hidden;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-img{
-    min-height:auto;
-    min-width:auto;
-    max-width: 100%;
-    height:auto;
-    width:auto;
-    position:absolute;
-    top:-100%; bottom:-100%;
-    left:-100%; right:-100%;
-    margin:auto;
+
+main {
+    width: 100%;
+    height: 100vh;
+}
+
+body {
+    background-color: #2d2e30
+}
+
+.visually-hidden {
+    border: 0;
+    padding: 0;
+    margin: 0;
+    position: absolute !important;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    clip: rect(1px 1px 1px 1px);
+    clip: rect(1px, 1px, 1px, 1px);
+    clip-path: inset(50%);
+    white-space: nowrap;
+}
+
+h2 {
+    box-sizing: border-box;
+    margin: auto;
+    display: flex;
+    border: 3px solid rgb(255, 255, 255);
+    padding: 20px;
+    font-size: 5vw;
+    line-height: 1.25em;
+    width: 10em;
+    color: white;
+    text-align: center;
+    justify-content: center;
 }
