--- a/styles.css
+++ b/styles.css
@@ -27,16 +27,18 @@ body {
     white-space: nowrap;
 }
 
-h2 {
+.h2 {
     box-sizing: border-box;
-    margin: auto;
-    display: flex;
     border: 3px solid rgb(255, 255, 255);
+    color: white;
     padding: 20px;
     font-size: 5vw;
-    line-height: 1.25em;
     width: 10em;
-    color: white;
-    text-align: center;
+    line-height: 1.25em;
+    display: flex;
     justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
