--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,29 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+body, html, div.bgimage {
+    padding: 0%;
+    margin: 0%;
+    height: 100%;
 }
 
-main {
-    width: 100%;
-    height: 100vh;
-}
 
 body {
-    background-color: #2d2e30
+    background-image: url('images/gray1.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
 }
 
-.visually-hidden {
-    border: 0;
-    padding: 0;
-    margin: 0;
-    position: absolute !important;
-    height: 1px;
-    width: 1px;
-    overflow: hidden;
-    clip: rect(1px 1px 1px 1px);
-    clip: rect(1px, 1px, 1px, 1px);
-    clip-path: inset(50%);
-    white-space: nowrap;
+/*
+.bgimage {
+    background-image: url('images/gray1.jpg');
+    background-position: center, center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    filter: blur(10px);
 }
+*/
 
 .h2 {
     box-sizing: border-box;
@@ -41,4 +39,9 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    position: absolute;
+    z-index: 2;
 }
+
+
+
